Implementing Series crud

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ChampagneApi": "Server=.\\;Database=BookTrackingApi;Trusted_Connection=True;TrustServerCertificate=True;"
+    "BookTrackingDB": "Server=.\\;Database=BookTrackingApi;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
